# Django-Curso

./: README.md  pyproject.toml
base_templates/global/: home.html
projeto/: settings.py  urls.py
recipes/: urls.py  views.py
recipes/templates/recipes/: contato.html  home.html  sobre.html
