[tool.poetry]
name = "django-curso"
version = "0.1.0"
description = "Projeto criado para fazer os curso de Django do Otavio Miranda"
authors = ["Vladimir Nacci <vlad.br@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
